Fixed dropdown's overflow being clipped in ViewTask, kept working on drag and drop

--- a/src/app.scss
+++ b/src/app.scss
@@ -43,9 +43,10 @@ dialog::backdrop {
 }
 dialog > div {
 	max-height: 90vh;
-	overflow-x: hidden; //should really be visible, but apparently if one is set to auto/scroll the other can't be set to visible
-	overflow-y: auto;
-	display: block !important;
+	//overflow-x: hidden; //should really be visible, but apparently if one is set to auto/scroll the other can't be set to visible
+	//overflow-y: auto;
+	align-items: unset !important;
+	justify-content: unset !important;
 	background: var(--background-color);
 	box-sizing: border-box;
 	padding: minMaxSize(24px, 32px);
